# debian-package-project

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  FuncA.cpp  HttpServer.cpp  Makefile  Makefile.am  NEWS  README  README.md  configure.ac  doc_2024-11-08_23-07-13.gitignore  docker-compose.yml  main.cpp  program  scriptA  scriptB
.github/workflows/: ci.yml  docker-build.yml
debian/: changelog  control  copyright  program.1  rules
docker-build/: Dockerfile  FuncA.h
nginx/: default.conf  nginx.conf
tests/: test_FuncA.cpp
